# pygtfslib

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  dev-requirements.in  dev-requirements.txt  pyproject.toml  renovate.json  requirements.txt  setup.cfg  setup.py
pygtfslib/: fast_csv.py  mot.py  spatial.py  temporal.py
pygtfslib/test/: test_spatial.py  test_temporal.py
