[project]
name = "pygtfslib"
description = "A Python Library for GTFS"
readme = "README.md"
dependencies = ["python-dateutil"]
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [{name = "Alexander Held | geOps", email = "alexander.held@geops.com"}]
maintainers = [{name = "Alexander Held | geOps", email = "alexander.held@geops.com"}]
keywords = [
  "public transport",
  "GTFS",
  "library",
  "efficient",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/geops/pygtfslib"
geOps = "https://geops.com/en"

[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["pygtfslib", "pygtfslib.*"]
